New project structure with multiple modules